fixed spacing, fixed website code photo, added space for future project

--- a/css/layout.css
+++ b/css/layout.css
@@ -33,14 +33,12 @@ img{
 }
 .main {
   display: grid;
-  max-height:1000px;
 }
 .main__content {
   display: grid;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr;
   row-gap: 10px;
   text-align: center;
-  max-height: 1000px;
 }
 .main_AboutMe{
   border-radius:20px
